dao bug was fixed, CRUD for Events with UI was added