@@ -3,6 +3,7 @@ package com.example.conference.dao;
 import com.example.conference.exceptions.DBException;
 import com.example.conference.exceptions.Messages;
 
+import java.lang.reflect.InvocationTargetException;
 import java.sql.*;
 import java.time.LocalDateTime;
 import java.util.LinkedList;
@@ -116,6 +117,7 @@ public class GenericAbstractDao<T> {
             mapperToDB.map(item, preparedStatement);
             addParameterToPreparedStatement(preparedStatement, paramNum, value);
             result = preparedStatement.executeUpdate() > 0;
+            System.out.println(result);
         } catch (SQLException sqle) {
            // log.error(sqle);
             return false;
@@ -155,8 +157,8 @@ public class GenericAbstractDao<T> {
     private T getItemInstance(Class t) {
         T item = null;
         try {
-            item = (T) t.newInstance();
-        } catch (InstantiationException | IllegalAccessException ie) {
+            item = (T) t.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException ie) {
            // log.error(ie);
         }
         return item;
@@ -166,8 +168,10 @@ public class GenericAbstractDao<T> {
             throws SQLException {
         if (value instanceof String)
             preparedStatement.setString(paramNum, (String) value);
-        if (value instanceof Integer)
+        if (value instanceof Integer) {
             preparedStatement.setInt(paramNum, (Integer) value);
+            System.out.println(preparedStatement);
+        }
         if (value instanceof LocalDateTime)
             preparedStatement.setObject(paramNum, value);
         if (value instanceof Boolean)
